[gd_scene load_steps=12 format=2]

[ext_resource path="res://views/FPS.gd" type="Script" id=1]
[ext_resource path="res://scripts/controllers/AbilityController.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/kenney/kenney.tres" type="Theme" id=3]
[ext_resource path="res://views/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://lib/BetterCam.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/controllers/StabilityController.gd" type="Script" id=6]
[ext_resource path="res://views/Abilities.gd" type="Script" id=7]
[ext_resource path="res://views/Stability.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "ui_show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1200, -0.25, 0, 0.25, 0, 0, -0.418121, 49.6505, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=3]
resource_name = "ui_show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ui_show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2000, -0.25, 0, 0.25, 0, 434, -0.418121, 49.6505, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="Node2D" type="Node2D"]

[node name="UIRoot" type="CanvasLayer" parent="."]

[node name="MainMenu" type="MarginContainer" parent="UIRoot"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -77.0
margin_right = 77.0
theme = ExtResource( 3 )
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UIRoot/MainMenu"]
margin_top = 40.0
margin_right = 154.0
margin_bottom = 560.0

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/MainMenu/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 147.0
margin_bottom = 513.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/MainMenu/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 486.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="UIRoot/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 100.0
margin_bottom = 214.0
text = "Main Menu"
align = 1
valign = 1

[node name="Play" type="Button" parent="UIRoot/MainMenu/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 100.0
margin_bottom = 276.736
text = "Play"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIRoot/MainMenu"]
anims/ui_show = SubResource( 1 )

[node name="Stability" type="MarginContainer" parent="UIRoot"]
anchor_right = 1.0
margin_bottom = 104.0
mouse_filter = 2
theme = ExtResource( 3 )
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/Stability"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 120.0
mouse_filter = 2

[node name="StabilityLabel" type="Label" parent="UIRoot/Stability/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0
text = "Stability: 69%"
align = 1

[node name="LoseWarning" type="Label" parent="UIRoot/Stability/VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 0.262745, 0.262745, 1 )
text = "(Lose in 420 seconds!)"
align = 1

[node name="WinWarning" type="Label" parent="UIRoot/Stability/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.305882, 0.913725, 0.160784, 1 )
text = "(Win in 420 seconds!)"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIRoot/Stability"]
anims/ui_show = SubResource( 3 )

[node name="Abilities" type="MarginContainer" parent="UIRoot"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
grow_vertical = 0
size_flags_vertical = 8
theme = ExtResource( 3 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UIRoot/Abilities"]
margin_right = 1024.0
margin_bottom = 92.0

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/Abilities/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 85.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="AbilitiesContainer" type="HBoxContainer" parent="UIRoot/Abilities/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 990.0
margin_bottom = 58.0
custom_constants/separation = 20
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UIRoot/Abilities"]
anims/ui_show = SubResource( 2 )

[node name="FPS" type="MarginContainer" parent="UIRoot"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 3 )
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UIRoot/FPS"]
margin_left = 10.0
margin_top = 13.0
margin_right = 82.0
margin_bottom = 37.0
text = "144 FPS"
script = ExtResource( 1 )

[node name="BetterCam" parent="." instance=ExtResource( 5 )]

[node name="Spawners" type="Node" parent="."]

[node name="Creatures" type="Node" parent="."]

[node name="Resources" type="Node" parent="."]

[node name="AbilityController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AbilityIcon" type="Sprite" parent="AbilityController"]
modulate = Color( 1, 1, 1, 0.376471 )
z_index = 100

[node name="StabilityController" type="Node" parent="."]
script = ExtResource( 6 )
